# assistente_com-banco

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMIT_INSTRUCTIONS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  assistente_com_banco.py  commit_and_push.ps1  commit_and_push.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: api.md
examples/: advanced_usage.py  basic_usage.py  export_import_example.py  similarity_analysis_example.py  streaming_example.py
src/database_assistant/: __init__.py  assistant.py  cli.py  config.py  database.py  logger.py  similarity.py
tests/: __init__.py  conftest.py  test_assistant.py  test_cli.py  test_config.py  test_database.py  test_logger.py  test_similarity.py
